# dartxlsxwriter

./: .gitignore  .metadata  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  filename.xlsx  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/dartxlsxwriter_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: dartxlsxwriter.dart  dartxlsxwriter_bindings_generated.dart
linux/: CMakeLists.txt
src/: CMakeLists.txt  dartxlsxwriter.c
windows/: CMakeLists.txt
